# glyph

./: .gitignore  README.md  README_EVALS.md  README_V2.md  archive_README.md  requirements-train.txt  reward_golden_tests.py  task_trace.py  train.py
agent_runtime/: chatml.py  protocol.py
archive_core/: validator.py
archive_data/: build.sh  generate.py  generate_hf_inline.py  prompts.yaml
archive_tools/: trace_viewer.html
blog/: 01_sft.md  archive.md  archive2.md  archive3.md  blog.md  blog_copy.md  blog_copy_copy.md  finalized_blog.md  finalized_blogv2.md  finalized_blogv3.md  gen_examples.py  glyph_sft.md  index.html  make_figures.py  polished_blog.md  render_html.py  technicals.md
docs/: ablation.md  agent_trace.md  data_manifest.json  glyph.md  sft_pipeleine.md
environments/glyph/: pyproject.toml
environments/glyph/glyph/: __init__.py  environment.py  reward.py  rollout_text.py  task_format.py  task_trace.py
environments/glyph/glyph/agent_runtime/rust/: results.py  runtime.py
rl/: README.md  RLVR_NOTES.md  RL_DATASET.md  audit_adapter_setup.py  environment.py  patch_install.py  prepare_smoke_prompts.py  protocol.py  review_rollouts.py  reward.py  rollout_text.py  run_api.py  setup_prime_rl.sh  task_trace.py  train.py
rl_ablations/: .gitignore
scripts/: eval_test_loss.py
setup/: install_prime_rl.sh
sft/: config.py  data.py  debug_vllm_trace.py  eval_formal.py  eval_test_loss.py  passk_scan_vllm.py  train.py
synthetic_data/: DATASET_LINEAGE.md  audit_blueprint_similarity.py  batch_scale_a_400_counts.json  batch_scale_b_350_counts.json  (+39 more)
(+2822 files in other folders)
